--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@
 }
 
 .min-h-stretch {
-    min-height: 456px;
+    min-height: 381px;
     margin-top: -60px;
 }
 
@@ -250,6 +250,11 @@
         --text-2lg: 46px;
         --text-3lg: 40px;
         --text-xxl: 65px;
+    }
+
+    .min-h-stretch {
+        min-height: 456px;
+        margin-top: -60px;
     }
 }
 
